# carbon-lang

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  BUILD  CONTRIBUTING.md  GEMINI.md  MODULE.bazel  README.md  SECURITY.md  pyproject.toml
.github/workflows/: README.md  auto_label_prs.yaml  check_dependent.yaml  check_dependent_pr.yaml  clangd_tidy.yaml  discord_wiki.yaml  gh_pages_ci.yaml  gh_pages_deploy.yaml  nightly_release.yaml  pre_commit.yaml  pre_commit_suggestions.yaml  prek.yaml  prek_suggestions.yaml  proposal_labeled.yaml  proposal_ready.yaml  sync_repos.yaml  tests.yaml  triage_inactive.yaml
bazel/carbon_rules/: defs.bzl
bazel/cc_toolchains/: BUILD  carbon_bootstrapping.bzl  carbon_cc_toolchain_config.bzl  carbon_clang_variables.bzl  carbon_runtimes.bzl  cc_toolchain_actions.bzl  cc_toolchain_base_features.bzl  cc_toolchain_carbon_project_features.bzl  cc_toolchain_config_features.bzl  cc_toolchain_cpp_features.bzl  cc_toolchain_debugging.bzl  cc_toolchain_features.bzl  cc_toolchain_linking.bzl  cc_toolchain_modules.bzl  cc_toolchain_optimization.bzl  cc_toolchain_sanitizer_features.bzl  cc_toolchain_tools.bzl  cc_tools_test.py  clang_cc_toolchain_config.bzl  clang_configuration.bzl  clang_detected_variables.tpl.bzl  defs.bzl  make_include_copts.bzl
bazel/check_deps/: BUILD  check_non_test_cc_deps.py  update_roots.py
bazel/llvm_project/: 0002_Added_Bazel_build_for_compiler_rt_fuzzer.patch  0004_Introduce_basic_sources_exporting_for_libunwind.patch  0005_Introduce_basic_sources_exporting_for_libcxx_and_libcxxabi.patch  0006_Add_a_filegroup_containing__all__sources_to_the_libc_build_rules.patch  0007_Remove_target_compatibility_restrictions_for_float128.patch  0008_Add_filegroups_for_installed_compiler-rt_headers.patch  0009_Introduce_starlark_exporting_compiler-rt_build_information.patch  0010_Expose_vptr_init.patch  0011-Add-empty-constructor-and-GetSources-method-to-Multi.patch
bazel/manifest/: defs.bzl
bazel/version/: gen_tmpl.py  rules.bzl
common/: BUILD  bazel_working_dir.h  check_internal.cpp  check_internal.h  command_line.cpp  command_line.h  enum_base.h  error_test_helpers.h  filesystem.cpp  filesystem.h  filesystem_benchmark.cpp  filesystem_test.cpp  hashing.h  hashtable_key_context.h  latch.cpp  latch.h  latch_test.cpp  map.h  map_benchmark.cpp  ostream.h  raw_hashtable.h  raw_hashtable_benchmark_helpers.cpp  raw_hashtable_benchmark_helpers.h  raw_hashtable_metadata_group.h  raw_hashtable_test_helpers.h  string_helpers.cpp  string_helpers.h  string_helpers_test.cpp
core/: BUILD  io.carbon  prelude.carbon  range.carbon
core/prelude/: copy.carbon  default.carbon  destroy.carbon  iterate.carbon  operators.carbon  types.carbon
docs/design/: README.md  assignment.md  classes.md  declaring_entities.md  functions.md  lambdas.md  name_lookup.md  naming_conventions.md  pattern_matching.md  sum_types.md  templates.md  tuples.md  type_inference.md  values.md  variadics.md
docs/images/: snippets.md
docs/project/: code_review.md  contribution_tools.md  cpp_style_guide.md  design_style_guide.md  evolution.md  faq.md  milestones.md  pull_request_workflow.md  roadmap.md  versioning.md
examples/: BUILD  bazel_test_runner.py  hello_world.carbon  sieve.carbon
examples/advent2024/: BUILD  day10_common.carbon  day10_part1.carbon  day10_part2.carbon  (+32 more)
examples/bazel/: BUILD  MODULE.bazel  example.cpp  example.h  example_lib.cpp  example_lib.h  update_module_to_nightly.py
github_tools/: BUILD  MODULE.bazel  check_dependent_pr.py  check_dependent_pr_test.py  github_helpers.py  github_helpers_test.py  pr_comments.py  requirements.txt
proposals/: README.md  p000029-linear-rebase-and-pull-request-github-workflow.md  p000044-proposal-tracking.md  p000051-goals.md  p000107-code-and-name-organization.md  p000140-create-initial-rough-framework-for-specification.md  p000142-unicode-source-files.md  p000144-numeric-literal-semantics.md  p000157-design-direction-for-sum-types.md  p000162-basic-syntax.md  p000179-create-a-toolchain-team.md  p000198-comments.md  p000253-2021-roadmap.md  p000257-initialization-of-memory-and-variables.md  p000339-var-statement.md  p000538-return-with-no-argument.md  p000555-operator-precedence.md  p000623-require-braces.md  p000646-low-context-sensitivity-principle.md  p000680-and-or-not.md  p000731-generics-details-2-adapters-associated-types-parameterized-interfaces.md  p000818-constraints-for-generics-generics-details-3.md  p000826-function-return-type-inference.md  p000845-as-expressions.md  p000851-variable-type-inference.md  p000866-allow-ties-in-floating-literals.md  p000911-conditional-expressions.md  p000920-generic-blanket-impls-details-5.md  p000989-member-access-expressions.md  p001083-arithmetic-expressions.md  p001144-generic-details-11-operator-overloading.md  p001154-destructors.md  p001191-bitwise-and-shift-operators.md  p001327-generics-impl-forall.md  p001344-remove-llvm-from-the-repository-and-clean-up-history.md  p001363-make-the-carbon-experiment-public.md  p001367-remove-codeowners.md  p001885-for-statement-and-user-types.md  p001964-character-literals.md  p001983-weaken-digit-separator-placement-rules.md  (+71 more)
scripts/: BUILD  bazel_mod_deps.py  bench_runner.py  calculate_release_shas.py  cargo_update.py  check_build_graph.py  check_header_guards.py  check_sha_filenames.py  create_compdb.py  fix_cc_deps.py  forbid_llvm_googletest.py  gh_review_stats.py  jj_prek.sh  lldbinit.py  no_op_test.py  query_module_versions.py  run_bazel.py  run_bazelisk.py  run_buildifier.py  run_buildozer.py  scripts_utils.py  source_stats.py  sync_repos.sh  target_determinator.py  update_tm_language.py  workspace_status.py
toolchain/: BUILD  autoupdate_testdata.py
toolchain/install/bazel/: carbon_cc_toolchain_config.bzl  carbon_clang_variables.bzl  carbon_detected_variables.tpl.bzl  carbon_runtimes.bzl  carbon_toolchain.bzl  clang_resource_dir.BUILD  install.BUILD  install.MODULE.bazel  make_include_copts.bzl  runtimes.BUILD
website/: 404.md  prebuild.py
(+2195 files in other folders)
